fix: adiciona fetch-depth 0 para corrigir erro do Nerdbank.GitVersioning

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,6 +17,7 @@ jobs:
       with:
         submodules: recursive
         token: ${{ secrets.PAT_TOKEN }}
+        fetch-depth: 0
 
     - name: Set common env
       shell: pwsh
