--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -11,6 +11,23 @@ jobs:
   build-and-release:
     runs-on: windows-2022
 
+    env:
+      RELEASE_DIRECTORY: prs_app\ProRacingSoftware\bin\Release"
+      RELEASE_CHANGES: changes.md"
+      ZIP_FILENAME: prs_app.zip"
+      SOLUTION_APP: prs_app\ProRacingSoftware.sln"
+      SOLUTION_SERVICE: prs_service\PrsService.sln"
+      PROJECT_SERVICE: prs_service\Prs.App.Service\Prs.App.Service.csproj"
+      PROJECT_SERVICE_OUT: prs_app\ProRacingSoftware\bin\Release\service"
+      INSTALLER_PROJECT: prs_app\Prs.App.Setup\Prs.App.Setup.csproj"
+      INSTALLER_FILENAME: Prs.App.Setup.exe"
+      INSTALLER_PATH: prs_app\Prs.App.Setup\bin\Release\net8.0-windows\win-x64\publish\Prs.App.Setup.exe"
+      MAIN_EXE_FILE: prs_app\ProRacingSoftware\bin\Release\ProRacingSoftware.exe"
+      RELEASE_SUFFIX: none
+      RELEASE_PRE: none
+      RELEASE_KIND: none
+      RELEASE_VERSION: none
+
     steps:
     - name: Checkout with submodules
       uses: actions/checkout@v4
@@ -102,7 +119,7 @@ jobs:
       run: |
         $changesPath = "${{ github.workspace }}\${{ env.RELEASE_CHANGES }}"
         if (-not (Test-Path $changesPath)) {
-          "# Release [{version}] - {date}" | Out-File -FilePath $changesPath -Encoding utf8
+          "# Release Notes" | Out-File -FilePath $changesPath -Encoding utf8
           "" | Out-File -FilePath $changesPath -Encoding utf8 -Append
           "## Changes" | Out-File -FilePath $changesPath -Encoding utf8 -Append
           "" | Out-File -FilePath $changesPath -Encoding utf8 -Append
@@ -120,18 +137,59 @@ jobs:
         $releaseVersion = "${{ env.RELEASE_VERSION }}${{ env.RELEASE_SUFFIX }}"
         $releaseDate = Get-Date -Format "dd-MM-yyyy"
         (Get-Content ${{ env.RELEASE_CHANGES }}) -replace "\[\{version\}\]", "[$releaseVersion]" `
+                                                 -replace "\{version\}", "$releaseVersion" `
                                                  -replace "\{date\}", "$releaseDate" | Set-Content ${{ env.RELEASE_CHANGES }}
 
     - name: Add prs_service changes to changes.md
       shell: pwsh
       run: |
+        $releaseVersion = "${{ env.RELEASE_VERSION }}${{ env.RELEASE_SUFFIX }}"
+        $releaseDate = Get-Date -Format "dd-MM-yyyy"
         $serviceChangesPath = "${{ github.workspace }}\prs_service\changes.md"
+        
         if (Test-Path $serviceChangesPath) {
-          Write-Host "Found prs_service changes.md, appending to release notes..."
-          "`n## prs_service Changes`n" | Out-File -FilePath "${{ env.RELEASE_CHANGES }}" -Encoding utf8 -Append
-          Get-Content $serviceChangesPath | Out-File -FilePath "${{ env.RELEASE_CHANGES }}" -Encoding utf8 -Append
+          Write-Host "Found prs_service changes.md, processing and appending to release notes..."
+          
+          # Read and process the service changes file
+          $serviceContent = Get-Content $serviceChangesPath -Raw
+          $serviceContent = $serviceContent -replace "\[\{version\}\]", "[$releaseVersion]" `
+                                           -replace "\{version\}", "$releaseVersion" `
+                                           -replace "\{date\}", "$releaseDate"
+          
+          # Remove the main title from service changes to avoid duplication
+          $serviceContent = $serviceContent -replace "^# Pro Racing Service\s*\n+", ""
+          
+          # Append to main changes file
+          "`n---`n" | Out-File -FilePath "${{ env.RELEASE_CHANGES }}" -Encoding utf8 -Append
+          $serviceContent | Out-File -FilePath "${{ env.RELEASE_CHANGES }}" -Encoding utf8 -Append
         } else {
           Write-Host "No changes.md found in prs_service submodule"
+        }
+
+    - name: Add prs_app changes to changes.md
+      shell: pwsh
+      run: |
+        $releaseVersion = "${{ env.RELEASE_VERSION }}${{ env.RELEASE_SUFFIX }}"
+        $releaseDate = Get-Date -Format "dd-MM-yyyy"
+        $appChangesPath = "${{ github.workspace }}\prs_app\changes.md"
+        
+        if (Test-Path $appChangesPath) {
+          Write-Host "Found prs_app changes.md, processing and appending to release notes..."
+          
+          # Read and process the app changes file
+          $appContent = Get-Content $appChangesPath -Raw
+          $appContent = $appContent -replace "\[\{version\}\]", "[$releaseVersion]" `
+                                   -replace "\{version\}", "$releaseVersion" `
+                                   -replace "\{date\}", "$releaseDate"
+          
+          # Remove the main title from app changes to avoid duplication
+          $appContent = $appContent -replace "^# Pro Racing Software\s*\n+", ""
+          
+          # Append to main changes file
+          "`n---`n" | Out-File -FilePath "${{ env.RELEASE_CHANGES }}" -Encoding utf8 -Append
+          $appContent | Out-File -FilePath "${{ env.RELEASE_CHANGES }}" -Encoding utf8 -Append
+        } else {
+          Write-Host "No changes.md found in prs_app submodule"
         }
 
     - name: Archive build
