--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -12,6 +12,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
+        token: ${{ secrets.PAT_TOKEN }}
         submodules: true
         fetch-depth: 0
 
@@ -37,7 +38,6 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        
         git add .
         if git diff --staged --quiet; then
           echo "No changes to commit"
