--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -202,7 +202,29 @@ jobs:
         }
         Compress-Archive -Path $sourcePath\* -DestinationPath $zipPath -Force
 
+    - name: Check if should create release
+      id: check_release
+      shell: pwsh
+      run: |
+        $shouldRelease = $true
+        $commitMessage = "${{ github.event.head_commit.message }}"
+        
+        Write-Host "Commit message: $commitMessage"
+        
+        # Se contém [skip-release], não cria release
+        if ($commitMessage -match "\[skip-release\]") {
+          $shouldRelease = $false
+          Write-Host "Found [skip-release] tag - skipping release creation"
+        }
+        else {
+          Write-Host "No [skip-release] tag found - will create release"
+        }
+        
+        echo "should_release=$shouldRelease" >> $env:GITHUB_OUTPUT
+        Write-Host "Final decision - Should create release: $shouldRelease"
+
     - name: Delete existing release if exists
+      if: steps.check_release.outputs.should_release == 'true'
       shell: pwsh
       run: |
         $tagName = "v${{ env.RELEASE_VERSION }}${{ env.RELEASE_SUFFIX }}"
@@ -230,6 +252,7 @@ jobs:
         }
 
     - name: Create release
+      if: steps.check_release.outputs.should_release == 'true'
       uses: softprops/action-gh-release@v1
       with:
         prerelease: ${{ env.RELEASE_PRE }}
